# raytracer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
lib/: CMakeLists.txt  Canvas.cpp  Canvas.h  CanvasToPpm.cpp  CanvasToPpm.h  Color.cpp  Color.h  Math.cpp  Math.h  Point.cpp  Point.h  Tuple.cpp  Tuple.h  Vector.cpp  Vector.h
samples/: CMakeLists.txt
samples/chapter1/: CMakeLists.txt  main.cpp
samples/chapter2/: CMakeLists.txt  main.cpp
samples/dummy/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  tests-canvas.cpp  tests-color.cpp  tests-tuple.cpp
